--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
         <mybatis.version>3.3.1</mybatis.version>
         <mybatis.spring.version>1.2.5</mybatis.spring.version>
         <dubbo.version>2.8.4</dubbo.version>
-        <mysql.version>5.1.39</mysql.version>
+        <mysql.version>6.0.4</mysql.version>
         <hibernate.volidate.version>5.2.4.Final</hibernate.volidate.version>
         <spring-session.version>1.0.2.release</spring-session.version>
         <shrio-spring.version>1.2.3</shrio-spring.version>
@@ -42,6 +42,12 @@
         <ptb-util.verion>1.2.4</ptb-util.verion>
         <gaia.version>3.2.5</gaia.version>
         <spring-boot.version>1.3.5.RELEASE</spring-boot.version>
+        <jedis.version>2.8.0</jedis.version>
+        <druid.version>1.0.26</druid.version>
+        <persistence-api.version>1.0</persistence-api.version>
+        <hibernate-validator>5.2.4.Final</hibernate-validator>
+        <pinyin4j.version>2.5.0</pinyin4j.version>
+        <uranus.smsclient>0.0.1-SNAPSHOT</uranus.smsclient>
     </properties>
     <modules>
         <module>zeus-common-core</module>
@@ -49,13 +55,7 @@
         <module>zeus-common-web</module>
         <module>zeus-user-service</module>
         <module>zeus-user-facade</module>
-        <!--        <module>zeus-media-service</module>
-                <module>zeus-media-facade</module>
-                <module>zeus-message-facade</module>
-                <module>zeus-message-service</module>
-                <module>zeus-admin</module>-->
         <module>zeus-server</module>
-        <!--        <module>zeus-third-weixin</module>-->
     </modules>
     <dependencies>
         <dependency>
@@ -108,8 +108,8 @@
                 </dependency>
                 <dependency>
                     <groupId>org.mybatis</groupId>
-                    <artifactId>mybatis-spring</artifactId>
-                    <version>${mybatis.spring.version}</version>
+                    <artifactId>mybatis-META-INF</artifactId>
+                    <version>${mybatis.META-INF.version}</version>
                 </dependency>
                 <dependency>
                     <groupId>org.apache.commons</groupId>
@@ -134,15 +134,17 @@
                     <artifactId>mongo-java-driver</artifactId>
                     <version>${mongo.version}</version>
                 </dependency>-->
-        <dependency>
-            <groupId>com.ptb.common</groupId>
-            <artifactId>ptb-utils</artifactId>
-            <version>${ptb-util.verion}</version>
-        </dependency>
+
         <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.12</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-test</artifactId>
+            <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
