--- a/zeus-common-config/pom.xml
+++ b/zeus-common-config/pom.xml
@@ -14,5 +14,9 @@
     <artifactId>zeus-common-config</artifactId>
     <version>3.0.0</version>
 
+    <dependencies>
+
+    </dependencies>
+
     
 </project>
