--- a/zeus-common-core/pom.xml
+++ b/zeus-common-core/pom.xml
@@ -11,10 +11,12 @@
 
     <artifactId>zeus-common-core</artifactId>
     <properties>
-        <persistence-api.version>1.0</persistence-api.version>
-        <hibernate-validator>5.2.4.Final</hibernate-validator>
-        <pinyin4j.version>2.5.0</pinyin4j.version>
-        <uranus.smsclient>0.0.1-SNAPSHOT</uranus.smsclient>
+        <mybatis.generator.generatorConfig.xml>
+            ${basedir}/src/main/resources/generate/generatorConfig.xml
+        </mybatis.generator.generatorConfig.xml>
+        <mybatis.generator.generatorConfig.properties>
+            file:///${basedir}/src/main/resources/generate/generatorConfig.properties
+        </mybatis.generator.generatorConfig.properties>
     </properties>
 
     <dependencies>
@@ -23,11 +25,50 @@
             <artifactId>jedis</artifactId>
             <version>${redis.version}</version>
         </dependency>
+        <!--    <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis</artifactId>
+                <version>${mybatis.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.mybatis</groupId>
+                <artifactId>mybatis-spring</artifactId>
+                <version>${mybatis.spring.version}</version>
+            </dependency>
+                 <dependency>
+                <groupId>tk.mybatis</groupId>
+                <artifactId>mapper</artifactId>
+                <version>${mapper.version}</version>
+            </dependency>
+            -->
         <dependency>
-            <groupId>org.mybatis</groupId>
-            <artifactId>mybatis</artifactId>
-            <version>${mybatis.version}</version>
+            <groupId>com.github.pagehelper</groupId>
+            <artifactId>pagehelper</artifactId>
+            <version>${pagehelper.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>com.alibaba</groupId>
+            <artifactId>druid</artifactId>
+            <version>${druid.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>${mysql.version}</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-jdbc</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-context</artifactId>
+            <version>${spring.version}</version>
+        </dependency>
+
         <dependency>
             <groupId>javax.persistence</groupId>
             <artifactId>persistence-api</artifactId>
@@ -37,12 +78,6 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-validator</artifactId>
             <version>${hibernate-validator}</version>
-        </dependency>
-
-        <dependency>
-            <groupId>com.belerweb</groupId>
-            <artifactId>pinyin4j</artifactId>
-            <version>${pinyin4j.version}</version>
         </dependency>
         <dependency>
             <groupId>org.apache.poi</groupId>
@@ -55,42 +90,53 @@
             <version>portable-1.2.7</version>
         </dependency>
         <dependency>
-            <groupId>com.github.pagehelper</groupId>
-            <artifactId>pagehelper</artifactId>
-            <version>${pagehelper.version}</version>
-        </dependency>
-        <!--通用Mapper-->
-        <dependency>
-            <groupId>tk.mybatis</groupId>
-            <artifactId>mapper</artifactId>
-            <version>${mapper.version}</version>
+            <groupId>commons-configuration</groupId>
+            <artifactId>commons-configuration</artifactId>
+            <version>${commons-configuration.version}</version>
         </dependency>
         <dependency>
-            <groupId>org.freemarker</groupId>
-            <artifactId>freemarker</artifactId>
-            <version>${freemark.version}</version>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.4</version>
         </dependency>
         <dependency>
-            <groupId>com.ptb.uranus.sms-client</groupId>
-            <artifactId>uranus-smsclient</artifactId>
-            <version>${uranus.smsclient}</version>
+            <groupId>com.ptb.zeus</groupId>
+            <artifactId>zeus-common-config</artifactId>
+            <version>${parent.version}</version>
         </dependency>
+
         <dependency>
-            <groupId>org.apache.shiro</groupId>
-            <artifactId>shiro-core</artifactId>
-            <version>${shrio-spring.version}</version>
+            <groupId>com.baomidou</groupId>
+            <artifactId>mybatis-plus</artifactId>
+            <version>1.4.5</version>
         </dependency>
-    <!--
-<dependency>
-     <groupId>org.apache.shiro</groupId>
-     <artifactId>shiro-ehcache</artifactId>
-     <version>${shrio-spring.version}</version>
- </dependency>
- <dependency>
-     <groupId>org.apache.shiro</groupId>
-     <artifactId>shiro-spring</artifactId>
-     <version>${shrio-spring.version}</version>
- </dependency>-->
+
+
+        <!--
+    <dependency>
+         <groupId>org.apache.shiro</groupId>
+         <artifactId>shiro-ehcache</artifactId>
+         <version>${shrio-META-INF.version}</version>
+     </dependency>
+     <dependency>
+         <groupId>org.apache.shiro</groupId>
+         <artifactId>shiro-META-INF</artifactId>
+         <version>${shrio-META-INF.version}</version>
+     </dependency>-->
     </dependencies>
 
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.mybatis.generator</groupId>
+                <artifactId>mybatis-generator-maven-plugin</artifactId>
+                <version>1.3.3</version>
+                <configuration>
+                    <configurationFile>${mybatis.generator.generatorConfig.xml}</configurationFile>
+                    <overwrite>true</overwrite>
+                    <verbose>true</verbose>
+                </configuration>
+            </plugin>
+        </plugins>
+    </build>
 </project>
