--- a/zeus-user-facade/pom.xml
+++ b/zeus-user-facade/pom.xml
@@ -21,5 +21,10 @@
 
     <dependencies>
 
+        <dependency>
+            <groupId>com.ptb.zeus</groupId>
+            <artifactId>zeus-common-core</artifactId>
+            <version>3.0.0</version>
+        </dependency>
     </dependencies>
 </project>
