--- a/zeus-user-service/src/main/webapp/WEB-INF/web.xml
+++ b/zeus-user-service/src/main/webapp/WEB-INF/web.xml
@@ -5,10 +5,10 @@
 <web-app>
     <context-param>
         <param-name>contextConfigLocation</param-name>
-        <param-value>classpath*:spring/dubbo-config.xml</param-value>
+        <param-value>classpath*:META-INF/spring/dubbo-config.xml</param-value>
     </context-param>
 
-    <!--this listener must be defined before the spring listener-->
+    <!--this listener must be defined before the META-INF listener-->
     <listener>
         <listener-class>com.alibaba.dubbo.remoting.http.servlet.BootstrapListener</listener-class>
     </listener>
