--- a/zeus-server/src/main/resources/application.properties
+++ b/zeus-server/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 #server.port=8081
 #spring.redis.host=192.168.5.33
 #spring.redis.port=6380
+server.session.cookie.name=ss
+logging.config=classpath:log4j.properties
+
