--- a/pom.xml
+++ b/pom.xml
@@ -14,40 +14,32 @@
         <common-config-version>3.0.0</common-config-version>
         <user-service-version>3.0.0</user-service-version>
         <user-facade-version>3.0.0</user-facade-version>
-        <media-service-version>3.0.0</media-service-version>
-        <media-facade-version>3.0.0</media-facade-version>
-        <message-service-version>3.0.0</message-service-version>
-        <message-facade-version>3.0.0</message-facade-version>
-        <message-facade-version>3.0.0</message-facade-version>
-        <admin-version>3.0.0</admin-version>
         <web-version>3.0.0</web-version>
 
-
+        <commons-lang3.version>3.4</commons-lang3.version>
         <commons-configuration.version>1.9</commons-configuration.version>
         <mybatis.version>3.3.1</mybatis.version>
         <mybatis.spring.version>1.2.5</mybatis.spring.version>
         <dubbo.version>2.8.4</dubbo.version>
         <mysql.version>6.0.4</mysql.version>
-        <hibernate.volidate.version>5.2.4.Final</hibernate.volidate.version>
         <spring-session.version>1.0.2.release</spring-session.version>
         <shrio-spring.version>1.2.3</shrio-spring.version>
         <redis.version>2.8.0</redis.version>
         <mapper.version>3.3.8</mapper.version>
         <pagehelper.version>4.1.1</pagehelper.version>
-        <freemark.version>2.3.23</freemark.version>
-        <spring.version>4.2.6.RELEASE</spring.version>
         <mongo.version>3.0.4</mongo.version>
         <zk.version>3.4.5</zk.version>
         <curator-version>3.2.0</curator-version>
         <ptb-util.verion>1.2.4</ptb-util.verion>
         <gaia.version>3.2.5</gaia.version>
-        <spring-boot.version>1.3.5.RELEASE</spring-boot.version>
+        <spring-boot.version>1.4.1.RELEASE</spring-boot.version>
+        <spring.version>4.3.3.RELEASE</spring.version>
         <jedis.version>2.8.0</jedis.version>
         <druid.version>1.0.26</druid.version>
         <persistence-api.version>1.0</persistence-api.version>
         <hibernate-validator>5.2.4.Final</hibernate-validator>
         <pinyin4j.version>2.5.0</pinyin4j.version>
-        <uranus.smsclient>0.0.1-SNAPSHOT</uranus.smsclient>
+
     </properties>
     <modules>
         <module>zeus-common-core</module>
@@ -58,12 +50,6 @@
         <module>zeus-server</module>
     </modules>
     <dependencies>
-        <dependency>
-            <groupId>org.apache.zookeeper</groupId>
-            <artifactId>zookeeper</artifactId>
-            <version>${zk.version}</version>
-        </dependency>
-
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-core</artifactId>
@@ -82,6 +68,7 @@
             <version>0.1</version>
         </dependency>
 
+
         <!--zookeeper package-->
         <dependency>
             <groupId>org.apache.zookeeper</groupId>
@@ -89,11 +76,6 @@
             <version>${zk.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.apache.curator</groupId>
-            <artifactId>curator-framework</artifactId>
-            <version>${curator-version}</version>
-        </dependency>
 
 
         <!--        <dependency>
