--- a/zeus-common-web/pom.xml
+++ b/zeus-common-web/pom.xml
@@ -15,9 +15,19 @@
     <version>3.0.0</version>
     <dependencies>
         <dependency>
-            <groupId>com.ptb.zeus</groupId>
-            <artifactId>zeus-common-core</artifactId>
-            <version>${parent.version}</version>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-validator</artifactId>
+            <version>${hibernate-validator}</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache</artifactId>
+            <version>2.8.3</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-web</artifactId>
+            <version>2.0.4</version>
         </dependency>
     </dependencies>
 </project>
