--- a/zeus-main-service/pom.xml
+++ b/zeus-main-service/pom.xml
@@ -35,6 +35,18 @@
             <version>${main-facade-version}</version>
         </dependency>
 
+
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>httpclient</artifactId>
+            <version>4.5.2</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.1</version>
+        </dependency>
+
         <dependency>
             <groupId>com.alibaba</groupId>
             <artifactId>dubbo</artifactId>
@@ -62,7 +74,6 @@
                 </exclusion>
             </exclusions>
         </dependency>
-
 
     </dependencies>
 </project>
