--- a/zeus-common-core/pom.xml
+++ b/zeus-common-core/pom.xml
@@ -85,6 +85,11 @@
             <artifactId>fastjson</artifactId>
             <version>1.2.13</version>
         </dependency>
+        <dependency>
+            <groupId>org.apache.httpcomponents</groupId>
+            <artifactId>fluent-hc</artifactId>
+            <version>4.5.1</version>
+        </dependency>
     </dependencies>
 
 </project>
