--- a/zeus-common-web/pom.xml
+++ b/zeus-common-web/pom.xml
@@ -29,5 +29,15 @@
             <artifactId>ehcache-web</artifactId>
             <version>2.0.4</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-web</artifactId>
+            <version>4.3.3.RELEASE</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.tomcat.embed</groupId>
+            <artifactId>tomcat-embed-core</artifactId>
+            <version>8.5.5</version>
+        </dependency>
     </dependencies>
 </project>
