--- a/zeus-server/src/main/resources/application.properties
+++ b/zeus-server/src/main/resources/application.properties
@@ -5,4 +5,7 @@ logging.config=classpath:log4j.properties
 spring.freemarker.template-loader-path=classpath:/static
 spring.freemarker.prefix=templates/
 spring.mvc.static-path-pattern=/static/**
+spring.http.multipart.max-file-size=10240KB
+spring.http.multipart.max-request-size=10240KB
+com.zeus.identity.img.max.size=10485760
 
