--- a/zeus-common-core/pom.xml
+++ b/zeus-common-core/pom.xml
@@ -67,7 +67,7 @@
         </dependency>
         <dependency>
             <groupId>com.ptb.zeus</groupId>
-            <artifactId>zeus-common-config</artifactId>
+            <artifactId>zeus-common</artifactId>
             <version>${parent.version}</version>
         </dependency>
         <dependency>
@@ -90,6 +90,12 @@
             <artifactId>fluent-hc</artifactId>
             <version>4.5.1</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-core</artifactId>
+            <version>4.1.3.RELEASE</version>
+        </dependency>
+
     </dependencies>
 
 </project>
