--- a/zeus-common-web/pom.xml
+++ b/zeus-common-web/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>tomcat-embed-core</artifactId>
             <version>8.5.5</version>
         </dependency>
+        <dependency>
+            <groupId>com.ptb.zeus</groupId>
+            <artifactId>zeus-common</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
+        </dependency>
     </dependencies>
 </project>
