--- a/zeus-main-service/pom.xml
+++ b/zeus-main-service/pom.xml
@@ -21,7 +21,7 @@
     <dependencies>
         <dependency>
             <groupId>com.ptb.zeus</groupId>
-            <artifactId>zeus-common-config</artifactId>
+            <artifactId>zeus-common</artifactId>
             <version>${common-config-version}</version>
         </dependency>
         <dependency>
@@ -45,6 +45,13 @@
             <groupId>org.apache.httpcomponents</groupId>
             <artifactId>fluent-hc</artifactId>
             <version>4.5.1</version>
+        </dependency>
+
+        <!-- 验证码生成 工具-->
+        <dependency>
+            <groupId>com.github.cage</groupId>
+            <artifactId>cage</artifactId>
+            <version>1.0</version>
         </dependency>
 
         <dependency>
@@ -73,6 +80,21 @@
                     <artifactId>spring-core</artifactId>
                 </exclusion>
             </exclusions>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>2.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>net.sf.ehcache</groupId>
+            <artifactId>ehcache-core</artifactId>
+            <version>2.6.6</version>
+        </dependency>
+        <dependency>
+            <groupId>com.ptb.zeus</groupId>
+            <artifactId>zeus-common</artifactId>
+            <version>3.0.0-SNAPSHOT</version>
         </dependency>
 
     </dependencies>
