--- a/zeus-common-core/pom.xml
+++ b/zeus-common-core/pom.xml
@@ -95,6 +95,11 @@
             <artifactId>spring-security-core</artifactId>
             <version>4.1.3.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
 
     </dependencies>
 
