--- a/zeus-common/src/main/resources/config.properties
+++ b/zeus-common/src/main/resources/config.properties
@@ -27,3 +27,8 @@ com.ptb.zeus.db.main.port=${common.mysql.port}
 com.ptb.zeus.db.main.username=${common.mysql.username}
 com.ptb.zeus.db.main.password=${common.mysql.password}
 com.ptb.zeus.db.main.url=jdbc:mysql://${com.ptb.zeus.db.main.host}:${com.ptb.zeus.db.main.port}/${com.ptb.zeus.db.main.db}?useSSL=false&useUnicode=true&characterEncoding=utf8
+
+com.zeus.static.resource.url.prefix=/static/u
+com.zeus.identity.img.max.size=10485760
+com.zeus.upload.file.max.size=10485760
+com.zeus.upload.file.path.prefix=/Users/eric/wk/self/java/zeus-parent/zeus-server/src/main/resources/static/u
