--- a/zeus-main-service/pom.xml
+++ b/zeus-main-service/pom.xml
@@ -96,6 +96,11 @@
             <artifactId>zeus-common</artifactId>
             <version>3.0.0-SNAPSHOT</version>
         </dependency>
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.5</version>
+        </dependency>
 
     </dependencies>
 </project>
