【功能] 增加了路径映射，解决增加相对路径后不识别的问题

--- a/zeus-server/src/main/resources/application.properties
+++ b/zeus-server/src/main/resources/application.properties
@@ -7,5 +7,11 @@ spring.freemarker.prefix=templates/
 spring.mvc.static-path-pattern=/static/**
 spring.http.multipart.max-file-size=10240KB
 spring.http.multipart.max-request-size=10240KB
+server.context-path=/test
+spring.freemarker.request-context-attribute=rc
+#spring.freemarker.expose-request-attributes=true
+#spring.freemarker.expose-session-attributes=true
+#spring.freemarker.allow-request-override=true
+
 
 
