--- a/pom.xml
+++ b/pom.xml
@@ -23,7 +23,7 @@
         <mybatis.version>3.3.1</mybatis.version>
         <mybatis.spring.version>1.2.5</mybatis.spring.version>
         <dubbo.version>2.8.4</dubbo.version>
-        <mysql.version>6.0.4</mysql.version>
+        <mysql.version>5.1.39</mysql.version>
         <spring-session.version>1.0.2.release</spring-session.version>
         <shrio-spring.version>1.2.3</shrio-spring.version>
         <redis.version>2.8.0</redis.version>
@@ -41,6 +41,8 @@
         <persistence-api.version>1.0</persistence-api.version>
         <hibernate-validator>5.2.4.Final</hibernate-validator>
         <pinyin4j.version>2.5.0</pinyin4j.version>
+        <atomikos.version>4.0.2</atomikos.version>
+        <cglib.version>3.2.2</cglib.version>
 
     </properties>
     <modules>
@@ -143,11 +145,7 @@
             <version>${spring.version}</version>
             <scope>test</scope>
         </dependency>
-        <dependency>
-            <groupId>commons-configuration</groupId>
-            <artifactId>commons-configuration</artifactId>
-            <version>${commons-configuration.version}</version>
-        </dependency>
+
 
     </dependencies>
 
