删除了DUBBO的依赖

--- a/zeus-web-backend/src/main/resources/application.properties
+++ b/zeus-web-backend/src/main/resources/application.properties
@@ -8,6 +8,7 @@ spring.mvc.static-path-pattern=/static/**
 spring.http.multipart.max-file-size=10240KB
 spring.http.multipart.max-request-size=10240KB
 spring.freemarker.request-context-attribute=rc
+server.port=8081
 
 
 
