完善了订单接口 增加了验证码识别相关逻辑接口 更新了服务和商品购买的方式与逻辑

--- a/zeus-common/src/main/resources/config.properties
+++ b/zeus-common/src/main/resources/config.properties
@@ -32,3 +32,7 @@ com.zeus.static.resource.url.prefix=/static/un
 com.zeus.identity.img.max.size=10485760
 com.zeus.upload.file.max.size=10485760
 com.zeus.upload.file.path.prefix=/Users/eric/wk/self/java/zeus-parent/zeus-server/src/main/resources/static/un
+
+chaojiying.username=a3163504123
+chaojiying.password=a3163504123
+chaojiying.codeType=892044
