--- a/zeus-tool/pom.xml
+++ b/zeus-tool/pom.xml
@@ -39,5 +39,10 @@
             <artifactId>jsoup</artifactId>
             <version>1.8.3</version>
         </dependency>
+        <dependency>
+            <groupId>net.sourceforge.htmlunit</groupId>
+            <artifactId>htmlunit</artifactId>
+            <version>2.23</version>
+        </dependency>
     </dependencies>
 </project>
